--- a/config.yml
+++ b/config.yml
@@ -1,24 +1,31 @@
 application:
+    # dev开发环境 test测试环境 prod线上环境
     mode: dev
-
+    # 服务器ip，默认使用 0.0.0.0
+    host: 0.0.0.0
+    # 端口号
+    port: 8000 # 服务端口号
+    
 log:
+    log_level: info
     # 日志名称和路径
-    info_filename: logs/info.log
-    error_filename: logs/error.log
+    log_filename: logs/go-app.log
     # 进行切割之前，日志文件最大值(单位：MB)，默认100MB
     max_size: 200
     # 保留旧文件的最大天数
     max_age: 30
     #  保留旧文件的最大个数
     max_backups: 7
+    # 是否压缩日志
+    compress: true
 
 database:
     # 支持gorm的mysql、sqlite3
     # driver: mysql
     # # 数据库连接字符串 mysql 缺省信息 charset=utf8&parseTime=True&loc=Local&timeout=1000ms
     # source: user:password@tcp(host:port)/db?charset=utf8&parseTime=True&loc=Local&timeout=1000ms
-    # driver: sqlite3
-    # source: sqlite3.db
+    driver: sqlite3
+    source: sqlite3.db
     # source: host=myhost port=myport user=gorm dbname=gorm password=mypassword
 
 redis:
