使用文件记录sql日志

--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ application:
     host: 0.0.0.0
     # 端口号
     port: 8000 # 服务端口号
-    
+
 log:
     log_level: info
     # 日志名称和路径
@@ -27,11 +27,14 @@ database:
     driver: sqlite3
     source: sqlite3.db
     # source: host=myhost port=myport user=gorm dbname=gorm password=mypassword
+    enable_sql_log: false
+    sql_log_level: info
+    sql_log_filename: logs/sql.log
 
 redis:
     host: host
-    port: port
-    password: passwod
+    port: 6379
+    password: 
     db: 0
     pool_size: 100
     min_idle_conns: 100
