--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,10 @@
 application:
     # dev开发环境 test测试环境 prod线上环境
-    mode: dev
+    mode: prod
     # 服务器ip，默认使用 0.0.0.0
     host: 0.0.0.0
     # 端口号
-    port: 8000 # 服务端口号
+    port: 8002 # 服务端口号
 
 log:
     log_level: info
