--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 application:
     # dev开发环境 test测试环境 prod线上环境
-    mode: prod
+    mode: dev
     # 服务器ip，默认使用 0.0.0.0
     host: 0.0.0.0
     # 端口号
